fixed navbar gap on top of page

--- a/css/styling.css
+++ b/css/styling.css
@@ -1,7 +1,7 @@
 body {
     font-size: 2em;
     margin: 0;
-    padding: 45px 0 0 0;
+    padding: 0 0 0 0;
     font-family: 'Lato', sans-serif;
 
 }
